chore: ignore env files, OS junk, and build artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,20 @@ yarn.lock
 # Logs
 logs/
 *.log
+
+# OS / editor
+.DS_Store
+.vscode/
+.idea/
+
+# Env / secrets
+.env
+.env.*
+!.env.example
+
+# Node build / logs
+node_modules/
+dist/
+build/
+.cache/
+*.log
