--- a/netlify.toml
+++ b/netlify.toml
@@ -2,8 +2,8 @@
   command = "npm ci"
   publish = "public"
   functions = "netlify/functions"
-
 [[redirects]]
   from = "/api/*"
-  to = "/.netlify/functions/api/:splat"
+  to   = "/.netlify/functions/api/:splat"
   status = 200
+  force = true
