Update .env.example to use Resend (remove outdated SendGrid refs)

--- a/.env.example
+++ b/.env.example
@@ -1,36 +1,56 @@
 # Medikah Chat API - Environment Variables
 # Copy this file to .env and fill in values
 
-# SendGrid (required for email notifications)
-SENDGRID_API_KEY=
-SENDGRID_SENDER_EMAIL=
-SENDGRID_SANDBOX_MODE=true  # Set to false for production
+# ===========================================
+# CORS (required for production)
+# ===========================================
+ALLOWED_ORIGINS=https://medikah.health,https://www.medikah.health
 
-# Doctor notifications (required)
-DOCTOR_NOTIFICATION_EMAIL=
+# ===========================================
+# EMAIL NOTIFICATIONS (required - Resend)
+# ===========================================
+RESEND_API_KEY=re_xxxxxxxxxx
+RESEND_SENDER_EMAIL=Medikah <noreply@medikah.health>
+EMAIL_SANDBOX_MODE=false  # Set to true to skip actual email sending
 
-# Appointment security (required - generate with: openssl rand -hex 32)
+# Doctor notification recipient
+DOCTOR_NOTIFICATION_EMAIL=doctor@example.com
+
+# ===========================================
+# TELEMEDICINE (at least one required)
+# ===========================================
+# Option 1: Single shared room URL
+DOXY_ROOM_URL=https://doxy.me/your-room
+
+# Option 2: Base URL for unique per-appointment rooms
+# DOXY_BASE_URL=https://doxy.me/medikah
+
+# ===========================================
+# APPOINTMENTS (required)
+# ===========================================
+# Security key - generate with: openssl rand -hex 32
 APPOINTMENT_HASH_KEY=
 
-# Telemedicine (at least one required)
-DOXY_ROOM_URL=
-DOXY_BASE_URL=
-
-# Doctor display name
-ON_CALL_DOCTOR_NAME=Medikah On-Call Doctor
-
-# OpenAI (optional - for patient education summaries)
-OPENAI_API_KEY=
-
-# Scheduling
+# Duration in minutes (default: 30)
 APPOINTMENT_DURATION_MINUTES=30
 
-# Supabase (optional - falls back to in-memory if not set)
+# Doctor display name shown to patients
+ON_CALL_DOCTOR_NAME=Dr. Smith
+
+# ===========================================
+# AI FEATURES (optional)
+# ===========================================
+# OpenAI - for patient education summaries
+OPENAI_API_KEY=
+
+# ===========================================
+# DATABASE (optional)
+# ===========================================
+# Supabase - falls back to in-memory if not set
 SUPABASE_URL=
 SUPABASE_SERVICE_ROLE_KEY=
 
-# Logging
+# ===========================================
+# LOGGING
+# ===========================================
 LOG_LEVEL=INFO
-
-# CORS (comma-separated allowed origins for production)
-ALLOWED_ORIGINS=http://localhost:3000
